fixed overflow of the image boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,4 +312,8 @@ p.progress-level {
         right: -1px;
         top: 100px;
       }
+
+      .overlay, .overlay2 {
+        top: 95px;
+    }
 }
